samples/_failures_safe/1761453744_6e7506_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f872da58.c: In function ‘main’:
./samples/SAFE/__tmp_f872da58.c:158:5: error: expected expression at end of input
  158 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_f872da58.c:158:5: error: expected declaration or statement at end of input
